--- a/src/app/dishorder/dishorder.component.css
+++ b/src/app/dishorder/dishorder.component.css
@@ -63,8 +63,13 @@
 	height: 75px;
 }
 
+.err-msg {
+  margin-top: 20px;
+  text-align: center;
+}
+
 .login-wrapper-header-secondary {
-	margin-top: 15px;
+	margin-top: 0px;
 	font-weight: 300;
     font-size: 24px;
     margin-bottom: 12px;
