--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -15,7 +15,7 @@
             <th>Total Amount</th>
             <th>Sent on</th>
           </tr>
-          <tr>
+          <tr (click)="popupOrderInfo()">
             <td>Friday, Aprirl 21</td>
             <td>HKT Restaurant</td>
             <td>930232</td>
