--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+/* @import '~@angular/material/prebuilt-themes/indigo-pink.css'; */
 body {
 	margin: 0;
 	height: 100vh;
@@ -8,3 +8,6 @@ body {
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.mat-pseudo-checkbox.mat-pseudo-checkbox-checked {
+  background: #4286f4;
+}
