--- a/src/app/menuofdishes/menuofdishes-dialog.component.html
+++ b/src/app/menuofdishes/menuofdishes-dialog.component.html
@@ -1,6 +1,6 @@
 <div>
-  <h3>Create dishes</h3>
-  <div class='create-dish-form'>
+  <div><h3>Create dishes</h3></div>
+  <div style='padding:10px;' class='create-dish-form'>
     <mat-form-field style="width: 100%;">
       <mat-select matNativeControl required placeholder="Select Supplier">
         <mat-option value="TML">TML Restaurant</mat-option>
@@ -31,6 +31,6 @@
         <mat-option value="HKT">Pizza</mat-option>
       </mat-select>
     </mat-form-field>
-    <button id="savebutton" mat-button>Save</button>
+    <div style=''><button id="savebutton" mat-button>Save</button></div>
   </div>
 </div>
