--- a/src/app/dashboard/dashboard-dialog.component.html
+++ b/src/app/dashboard/dashboard-dialog.component.html
@@ -28,7 +28,6 @@
 <!-- Copyright 2019 Google Inc. All Rights Reserved.
     Use of this source code is governed by an MIT-style license that
     can be found in the LICENSE file at http://angular.io/license -->
-
 <div class="flex-container">
   <article class="flex" id="left-side">
     <h1 mat-dialog-title><p>Pick dish for May, {{data.orderDay}}</p></h1>
@@ -50,7 +49,7 @@
           </mat-list-option>
         </mat-selection-list>
       </div>
-      <button mat-button (click)="openDialogCreateDish()">Not in the list ?</button>
+      <button mat-button (click)="openDialogCreateDish()">Create new dish</button>
     </div>
   </article>
   <article class="flex" id="right-side">
