--- a/src/app/dishorder/dishorder.component.html
+++ b/src/app/dishorder/dishorder.component.html
@@ -14,7 +14,7 @@
         <div class="login-wrapper-header-third">DI LTD Email</div>
       </div>
       <div class="err-msg">
-        <p style="color: #e12b0c;font-size: 14px;font-weight: 400;"> {{apiMsg}} </p>
+        <p> {{apiMsg}} </p>
       </div>
       <div class="form-login-wrapper">
         <div class="wrapper-form-login-main">
@@ -32,7 +32,6 @@
       <div class="more-info">
         <a>Forgot Password?</a>
         <a [routerLink]="" (click)="registerAndAlreadyHaveAccountButton()" > Create Account</a>
-        <!-- <a routerLink="/register"> Create Account</a> -->
       </div>
     </div>
   </div>
