--- a/src/app/menuofdishes/menuofdishes-dialog.component.html
+++ b/src/app/menuofdishes/menuofdishes-dialog.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class='dishes-container'>
   <div><h3>Create dishes</h3></div>
   <div style='padding:10px;' class='create-dish-form'>
     <mat-form-field style="width: 100%;">
@@ -31,6 +31,15 @@
         <mat-option value="HKT">Pizza</mat-option>
       </mat-select>
     </mat-form-field>
-    <div style=''><button id="savebutton" mat-button>Save</button></div>
+    <div class="input-image">
+      <div style='width: 40%;padding:5px;'>
+        <img style='height:120px;max-width:160px;display:block;margin:auto;' [src]="imgURL" *ngIf="imgURL">
+        <img style='height:120px;max-width:160px;display:block;margin:auto;' src='../../assets/insert-picture-icon.png'*ngIf="!imgURL">
+      </div>
+      <div style='width: 60%;margin: auto;'>
+        <input style='width: 100%;' #file type="file" accept='image/*' (change)="preview(file.files)" />
+      </div>
+    </div>
+    <div><button id="savebutton" (click)="save()" mat-button>Save</button></div>
   </div>
 </div>
