--- a/src/app/orders/orders-dialog.component.html
+++ b/src/app/orders/orders-dialog.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h3>Order Details</h3>
+  <h3>Order Details - TML - Friday, April 21</h3>
   <div class='detail-table'>
     <div class="table">
       <div>
