--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,3 +1,4 @@
+<app-headernavbar></app-headernavbar>
 <div class="container-fuild-dashboard">
     <div class="main-body-loading" *ngIf="loading">
       <mat-spinner [diameter]='50' ></mat-spinner>
