--- a/src/app/menuofdishes/menuofdishes.component.html
+++ b/src/app/menuofdishes/menuofdishes.component.html
@@ -1,11 +1,25 @@
+<app-headernavbar></app-headernavbar>
 <div class="container-fuild-dashboard">
+  <div class="filtering-options">
+    <div class="filter-button" style='cursor: pointer;' [matMenuTriggerFor]="menu">FILTER OPTIONS</div>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item>Item 1</button>
+      <button mat-menu-item>Item 2</button>
+    </mat-menu>
+    <div class="filter-button" style='cursor: pointer;' [matMenuTriggerFor]="menu">TAGS</div>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item>Item 1</button>
+      <button mat-menu-item>Item 2</button>
+    </mat-menu>
+    <div class="filter-button" style='cursor: pointer;float: right;' (click)="openDialog()">CREATE NEW DISH</div>
+  </div>
   <div class="dishescontainer">
-    <div (click)='openDialog()' style='text-align: center;' class="dishes">
-      <img class='none' src="../../assets/button_new.png" alt="">
-      <div class="dishesdescription">
-        <span class="dishesname" style='color: silver;'>New dish</span>
+    <!-- <div (click)='openDialog()' style='text-align: center; padding:10px 30px 10px 30px;' class="dishes">
+      <img style='opacity: 0.8;' src='../../assets/insert-picture-icon.png' alt="">
+      <div>
+        <span class="dishesname" style='color: silver;font-weight: 300'>New dish</span>
       </div>
-    </div>
+    </div> -->
     <div class="dishestag"> Pizza </div>
     <div class="dishes">
       <img src="https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
