--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -13,19 +13,26 @@
         <div class="login-wrapper-header-secondary">Email Sign Up</div>
       </div>
       <div class="form-login-wrapper">
-        <div class="wrapper-form-login-main">
-          <div class="form-login-main">
-            <input placeholder="Email" type="text" style="padding: 0px; position: relative; width: 100%; border: none; outline: none; background-color: rgba(0, 0, 0, 0); color: rgb(112, 120, 125); cursor: initial; font: inherit; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 100%;">
-          </div>
+        <div class="err-msg">
+          <p> {{apiMsg}} </p>
         </div>
         <div class="form-login-main">
-          <input placeholder="Password" type="password" style="padding: 0px; position: relative; width: 100%; border: none; outline: none; background-color: rgba(0, 0, 0, 0); color: rgb(112, 120, 125); cursor: initial; font: inherit; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 100%;">
+          <input [(ngModel)]="emailInput" placeholder="Email" type="text" style="padding: 0px; position: relative; width: 100%; border: none; outline: none; background-color: rgba(0, 0, 0, 0); color: rgb(112, 120, 125); cursor: initial; font: inherit; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 100%;">
+        </div>
+        <div class="form-login-main">
+          <input [(ngModel)]="firstName" placeholder="First Name" type="text" style="padding: 0px; position: relative; width: 100%; border: none; outline: none; background-color: rgba(0, 0, 0, 0); color: rgb(112, 120, 125); cursor: initial; font: inherit; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 100%;">
+        </div>
+        <div class="form-login-main">
+          <input [(ngModel)]="familyName" placeholder="Family Name" type="text" style="padding: 0px; position: relative; width: 100%; border: none; outline: none; background-color: rgba(0, 0, 0, 0); color: rgb(112, 120, 125); cursor: initial; font: inherit; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 100%;">
+        </div>
+        <div class="form-login-main">
+          <input [(ngModel)]="passwordInput" placeholder="Password" type="password" style="padding: 0px; position: relative; width: 100%; border: none; outline: none; background-color: rgba(0, 0, 0, 0); color: rgb(112, 120, 125); cursor: initial; font: inherit; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 100%;">
         </div>
         <div class="form-login-main">
           <input placeholder="Retype Password" type="password" style="padding: 0px; position: relative; width: 100%; border: none; outline: none; background-color: rgba(0, 0, 0, 0); color: rgb(112, 120, 125); cursor: initial; font: inherit; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 100%;">
         </div>
         <div class="form-login-button">
-          <button type="submit" class="btn btn-primary">Sign Up</button>
+          <button (click)="registerButton()" type="submit" class="btn btn-primary">Sign Up</button>
         </div>
       </div>
       <div class="more-info">
