--- a/src/app/suppliers/suppliers.component.css
+++ b/src/app/suppliers/suppliers.component.css
@@ -52,3 +52,14 @@
   width: 50%;
   padding: 10px;
 }
+
+.mat-button#savebutton{
+  margin-top: 0px;
+  float: right;
+  background-color: #4286f4;
+  color: white;
+}
+
+.input-image {
+  display: flex;
+}
