--- a/src/app/suppliers/suppliers-dialog.component.html
+++ b/src/app/suppliers/suppliers-dialog.component.html
@@ -2,19 +2,19 @@
     <div><h3>Create Supplier</h3></div>
     <div style='padding:10px;' class='create-dish-form'>
       <mat-form-field  style="width:100%;">
-        <input matInput placeholder="Supplier code" required>
+        <input matInput [(ngModel)]="code" placeholder="Supplier code" required>
       </mat-form-field>
       <mat-form-field  style="width:100%;">
-        <input matInput placeholder="Name" required>
+        <input matInput [(ngModel)]="name" placeholder="Name" required>
       </mat-form-field>
       <mat-form-field  style="width:100%;">
-        <input matInput placeholder="Email address" required>
+        <input matInput [(ngModel)]="email_address" placeholder="Email address" required>
       </mat-form-field>
       <mat-form-field  style="width:100%;">
-        <input matInput placeholder="Phone Number" required>
+        <input matInput [(ngModel)]="phone" placeholder="Phone Number" required>
       </mat-form-field>
       <mat-form-field style="width:100%;">
-        <input matInput placeholder="Contact Name" required>
+        <input matInput [(ngModel)]="contact_name" placeholder="Contact Name" required>
       </mat-form-field>
       <mat-form-field style="width: 50%;padding-right: 10px">
         <mat-select placeholder="Order Dead Line">
@@ -71,7 +71,7 @@
         </mat-select>
       </mat-form-field>
       <mat-form-field style="width: 33%;">
-        <mat-select [(value)]='defaultValue' placeholder="Currency">
+        <mat-select [(value)]='defaultValueCurrency' placeholder="Currency">
           <mat-option value="VND">VND</mat-option>
           <mat-option value="USD">USD</mat-option>
         </mat-select>
@@ -85,6 +85,6 @@
           <input style='width: 100%;' #file type="file" accept='image/*' (change)="preview(file.files)" />
         </div>
       </div>
-      <div><button id="savebutton" mat-button>Save</button></div>
+      <div><button id="savebutton" (click)="save()" mat-button>Save</button></div>
     </div>
   </div>
