--- a/src/app/suppliers/suppliers-dialog.component.html
+++ b/src/app/suppliers/suppliers-dialog.component.html
@@ -1,77 +1,35 @@
 <div class='dishes-container'>
-    <div><h3>Create Supplier</h3></div>
+    <div *ngIf="!is_edit" style='margin-top: 18px;'><h3>Create Supplier</h3></div>
+    <div *ngIf="is_edit" style='margin-top: 18px;'><h3>Edit Supplier</h3></div>
     <div style='padding:10px;' class='create-dish-form'>
       <mat-form-field  style="width:100%;">
-        <input matInput [(ngModel)]="code" placeholder="Supplier code" required>
+        <input (change)="test()" matInput [(ngModel)]="code" placeholder="Supplier code" required>
       </mat-form-field>
       <mat-form-field  style="width:100%;">
-        <input matInput [(ngModel)]="name" placeholder="Name" required>
+        <input (change)="test()" matInput [(ngModel)]="name" placeholder="Name" required>
       </mat-form-field>
       <mat-form-field  style="width:100%;">
-        <input matInput [(ngModel)]="email_address" placeholder="Email address" required>
-      </mat-form-field>
-      <mat-form-field  style="width:100%;">
-        <input matInput [(ngModel)]="phone" placeholder="Phone Number" required>
+        <input (change)="test()" matInput [(ngModel)]="email_address" placeholder="Email address" required>
       </mat-form-field>
       <mat-form-field style="width:100%;">
-        <input matInput [(ngModel)]="contact_name" placeholder="Contact Name" required>
+        <input (change)="test()" matInput [(ngModel)]="contact_name" placeholder="Contact Name" required>
       </mat-form-field>
-      <mat-form-field style="width: 50%;padding-right: 10px">
-        <mat-select placeholder="Order Dead Line">
-          <mat-option value="1">1</mat-option>
-          <mat-option value="2">2</mat-option>
-          <mat-option value="3">3</mat-option>
-          <mat-option value="4">4</mat-option>
-          <mat-option value="5">5</mat-option>
-          <mat-option value="6">6</mat-option>
-          <mat-option value="7">7</mat-option>
-          <mat-option value="8">8</mat-option>
-          <mat-option value="9">9</mat-option>
-          <mat-option value="10">10</mat-option>
-          <mat-option value="11">11</mat-option>
-          <mat-option value="12">12</mat-option>
-        </mat-select>
+      <mat-form-field  style="width:50%;padding-right: 10px">
+        <input (change)="test()" matInput [(ngModel)]="phone" placeholder="Phone Number" required>
       </mat-form-field>
-      <mat-form-field style="width: 50%;padding-right: 10px">
-        <mat-select [(value)]='defaultAM'>
-          <mat-option value="AM">AM</mat-option>
-          <mat-option value="PM">PM</mat-option>
-        </mat-select>
+      <mat-form-field (change)="test()" style="width:50%">
+        <input matInput [(ngModel)]="deadline" placeholder="Order Time Deadline" aria-label="24hr format" [ngxTimepicker]="fullTime" [format]="24"  readonly>
+        <mat-icon matSuffix>alarm</mat-icon>
+        <ngx-material-timepicker #fullTime></ngx-material-timepicker>
       </mat-form-field>
       <mat-form-field style="width: 33%;padding-right: 10px">
-        <mat-select placeholder="Min Quantity">
-            <mat-option value="1">1</mat-option>
-            <mat-option value="2">2</mat-option>
-            <mat-option value="3">3</mat-option>
-            <mat-option value="4">4</mat-option>
-            <mat-option value="5">5</mat-option>
-            <mat-option value="6">6</mat-option>
-            <mat-option value="7">7</mat-option>
-            <mat-option value="8">8</mat-option>
-            <mat-option value="9">9</mat-option>
-            <mat-option value="10">10</mat-option>
-            <mat-option value="11">11</mat-option>
-            <mat-option value="12">12</mat-option>
-        </mat-select>
+          <input (change)="test()" matInput [(ngModel)]="min_quantity" placeholder="Min Quantity" required>
       </mat-form-field>
       <mat-form-field style="width: 33%;padding-right: 10px">
-        <mat-select placeholder="Min Amount">
-            <mat-option value="1">1</mat-option>
-            <mat-option value="2">2</mat-option>
-            <mat-option value="3">3</mat-option>
-            <mat-option value="4">4</mat-option>
-            <mat-option value="5">5</mat-option>
-            <mat-option value="6">6</mat-option>
-            <mat-option value="7">7</mat-option>
-            <mat-option value="8">8</mat-option>
-            <mat-option value="9">9</mat-option>
-            <mat-option value="10">10</mat-option>
-            <mat-option value="11">11</mat-option>
-            <mat-option value="12">12</mat-option>
-        </mat-select>
+          <input (change)="test()" matInput [(ngModel)]="min_amount" placeholder="Min Amount" required>
       </mat-form-field>
       <mat-form-field style="width: 33%;">
-        <mat-select [(value)]='defaultValueCurrency' placeholder="Currency">
+        <mat-select [(value)]='currency' placeholder="Currency" (change)="test()">
           <mat-option value="VND">VND</mat-option>
           <mat-option value="USD">USD</mat-option>
         </mat-select>
@@ -82,7 +40,7 @@
           <img style='height:120px;max-width:160px;display:block;margin:auto;' src='../../assets/insert-picture-icon.png' *ngIf="!imgURL">
         </div>
         <div style='width: 60%;margin: auto;'>
-          <input style='width: 100%;' #file type="file" accept='image/*' (change)="preview(file.files)" />
+          <input (change)="test()" style='width: 100%;' #file type="file" accept='image/*' (change)="preview(file.files)" />
         </div>
       </div>
       <div><button id="savebutton" (click)="save()" mat-button>Save</button></div>
